--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
+	"id": "obsidian-feeds-reader",
+	"name": "Feeds Reader",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"description": "This is an Obsidian plugin for reading RSS feeds.",
+	"author": "fjdu",
+	"authorUrl": "https://fjdu.github.io",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
