feed management added

--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,6 @@
 	"description": "This is an Obsidian plugin for reading RSS feeds.",
 	"author": "fjdu",
 	"authorUrl": "https://fjdu.github.io",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"fundingUrl": "https://www.buymeacoffee.com/fjdu",
 	"isDesktopOnly": false
 }
