--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-feeds-reader",
+	"id": "rss-feeds-reader",
 	"name": "Feeds Reader",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
